--- a/index.html
+++ b/index.html
@@ -11,9 +11,50 @@
  
 </head>
 <body>
-  
+  <main class= "container">
+    
+    <div class="container-left">
+      <img id="background" src="">
+      <img id="illustration" src="">
+
+    </div>
 
 
+    <div class= "container-right">
+      <div class="head">
+
+      </div>
+
+      <div class= "content">
+        <h1></h1>
+        <p></p>
+
+      </div>
+
+      <div class= "sign-up">
+        <h3>Sign Up</h3>
+        <input class= "user-input" type= "text"/>
+
+
+      </div>
+
+      <button class="login" type= "submit">Login</button>
+
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
+
+  </main>
 
   <footer>
     <p class="attribution">
